Sessão SOBRE NÓS
Desenvolvimento da sessão sobre nós

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
                 </nav>
             </div>
             <div>
+            <!--Banner-->
                 <img class="banner" src="../gueEnvelopamento/img/banner.png.jpg" alt="">
             </div>
+            <!--Conteúdo da página WEB-->
+            <main>
+                <sectionc class="sobre_nos">
+                    <h2 class="titulo_sobrenos">Sobre nós</h2>
+                    <img src="img/golf.jpg" class="img_sobrenos"/>
+                    <p>Texto, texto, texto, texto</p>
+
+                </section>
+            </main>
          </header>
     </boody>
 </html>
