--- a/index.html
+++ b/index.html
@@ -1,34 +1,64 @@
 <html>
     <head>
         <link href="css/estilos.css" rel="stylesheet"/>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
         <meta charset="UTF-8"/>
         <title>envelopamento</title>
     </head>
-    <boody>
+    <body>
          <header>
             <div class="divHeader"> 
                 <img src="img/meulogo.png.png " title="Site do envelopamento" class="logo"/>
                 <nav>
                     <ul>
                         <li>Home</li>
-                        <li>Produtos</li>
+                        <li><a href="adesivos.html">adesivos</a></li>
                         <li>Contato</li>                       
-                    </ul>
+                    </ul>                   
                 </nav>
             </div>
             <div>
             <!--Banner-->
-                <img class="banner" src="../gueEnvelopamento/img/banner.png.jpg" alt="">
+                <img class="banner" src="../gueEnvelopamento/img/banner_9.jpg" alt="">
             </div>
             <!--Conteúdo da página WEB-->
             <main>
-                <sectionc class="sobre_nos">
+                <section class="sobre_nos">
                     <h2 class="titulo_sobrenos">Sobre nós</h2>
                     <img src="img/golf.jpg" class="img_sobrenos"/>
-                    <p>Texto, texto, texto, texto</p>
-
+                    <p class="fonte_textos"> A Guê Wrapping é especialista em envelopamento, transformando qualquer superfície com qualidade, estilo e durabilidade. Seja para veículos, móveis, eletrodomésticos ou qualquer outro item, garantimos um serviço personalizado e de alto padrão. Com materiais de primeira linha e uma equipe qualificada, oferecemos soluções inovadoras para quem deseja renovar, proteger ou personalizar seus bens. Na Guê Wrapping, o limite é a sua criatividade!</p>                  
+                </section>
+                <!--Nosso estabelecimento-->
+                <section class="mapaGeral">
+                    <h2 class="titulo_sobrenos"> Nossa localização </h2>
+                    <p> veja abaixo onde encontrar nosso estabelecimento </p>
+                    <div class="mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.1633167377177!2d-46.593195323850935!3d-23.634321578749688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5ca6e0cce447%3A0xb7f414d07340878b!2sRua%20Colombo%20Florence%2C%2052%20-%20Parque%20Fongaro%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004257-045!5e0!3m2!1spt-BR!2sbr!4v1741384413775!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </section>
+                <!--Nossos Produtos-->
+                <section class="nossosprodutos">
+                    <h2 class="titulo_sobrenos">Nossos adesivos</h2>
+                    <div class="div_nossosprodutos">
+                        <ul class="lista_nossosprodutos">
+                            <li>texto</li>
+                            <li>texto</li>
+                            <li>texto</li>
+                            <li>texto</li> 
+                            <li>texto</li>                      
+                        </ul><img src="img/produtos3.jpg" class="img_nossosprodutos"/>                        
+                    </div>
+                    <!--Vídeo-->
+                    <div class="video">
+                        <iframe width="800" height="515" src="https://www.youtube.com/embed/fWegYcVIAsI?si=p7sydDR2KF1iL9ZJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                 </section>
             </main>
+            <!--Rodapé-->
+            <footer>
+                <img src="img/meulogo.png.png " title="Site do envelopamento" class="logo_footer"/>
+                <p> <a href="https://wa.me/5511958965806"><i class="fa fa-whatsapp"></i></a> (11) 95896-5806 | <a href="https://instagram.com/gue_envelopamentos_"><i class="fa fa-instagram"></i></a> @gue_envelopamentos</p>
+            </footer>
          </header>
-    </boody>
+    </body>
 </html>
