--- a/adesivos.html
+++ b/adesivos.html
@@ -52,19 +52,32 @@
                     sei la sei la sei la 
                 </P>
                 <div class="container">
-                    <div class="card" onclick = "abrirDetalhes('Veículos','Descrição do adesivo')">
+                    <script>
+                        //Insere a descrição do produto 
+                        descVeiculos="Estes são os modelos"
+                        sliderVeiculos=['img/golf.jpg', 'img/produtos.jpg']
+                    </script>
+                    <div class="card" onclick = "abrirDetalhes('Veículos',sliderVeiculos,descVeiculos)">
                         <img src="img/"/>
                         <h2>Veículos</h2>
                         <p>Carros, Motos, Vans, Caminhões, Ônibus</p>
                     </div>
-
+                    <script>
+                        //Insere a descrição do produto 
+                        descEletrodomesticos="Estes são os modelos"
+                        sliderEletrodomesticos=['']
+                    </script>
                     <div class="card">
                         <img src="img/"/>
                         <h2>Eletrodomésticos</h2>
                         <p>Geladeiras, Micro-ondas, Fogões...</p>
                     </div>
-
-                    <div class="card">
+                    <script>
+                        //Insere a descrição do produto 
+                        descMoveis="Estes são os modelos"
+                        sliderMoveis=['']
+                    </script>
+                    <div class="card" >
                         <img src="img/"/>
                         <h2>Móveis</h2>
                         <p>Armários, Guarda-Roupas, Mesas...</p>
