--- a/pop_adesivos.html
+++ b/pop_adesivos.html
@@ -1,12 +1,18 @@
 <html>
     <head>
         <title>envelopamento</title>
+        <link href="css/pop_adesivos.css" rel="stylesheet"> 
     </head>
     <body>
         <main>
-            <div>
+            <div class="pop">
                 <h1 id="nome-adesivos">Título</h1>
-                <img id="imagem-adesivos"/>
+                <!--<img id="imagem-adesivos" src="" alt=""-->
+                <div class="slider">
+                    <button id="prevBtn">&#10094;</button>
+                    <img id="slider-img" src="" alt="">
+                    <button id="nextBtn">&#10095;</button>
+                </div>
                 <P id="descricao-adesivos">Descrição do adesivo</P>
 
                 <!--Preenchimento das informações-->
@@ -18,9 +24,33 @@
 
                     //Preenche as informações na POP 
                     document.getElementById("nome-adesivos").textContent = getParametros("nomeProd");
-                    document.getElementById("imagem-adesivos").src = getParametros("imagemProd");
+                    //document.getElementById("imagem-adesivos").src = getParametros("imagemProd");
                     document.getElementById("descricao-adesivos").textContent = getParametros("descricaoProd");
                     
+                    /*Controle do Slider*/ 
+                    const imagens=getParametros("imagemProd")
+                                  ? getParametros("imagemProd").split(',')
+                                  : [];
+                    let index=0;
+                    const sliderImg=document.getElementById("slider-img");
+
+                    function MostrarImagem(){
+                        if(imagens.length > 0){
+                            sliderImg.src=imagens[index];
+                        }
+                    }
+                    document.getElementById("prevBtn").onclick = function() {
+                        index = (index-1 + imagens.length) % imagens.length;
+                        MostrarImagem();
+                    }
+
+                    document.getElementById("nextBtn").onclick = function() {
+                        index = (index+1) % imagens.length;
+                        MostrarImagem();
+                    }
+
+                    //Exibe a primeira imagem 
+                    MostrarImagem();
                 </script>
             <div>
         <main>
